# rolling-points-algorithm

./: CMakeLists.txt  README.md  configurations.cpp  configurations.h  constructive-heuristic.cpp  constructive-heuristic.h  data-read.cpp  distance-matrix.cpp  distance-matrix.h  distance.cpp  distance.h  heuristic.cpp  heuristic.h  heuristica-construtiva.cpp  heuristica-construtiva.h  main.cpp  neighborhoods.cpp  neighborhoods.h  node.cpp  node.h  solution.cpp  string-utils.h
data_structures/: OptMatrix.cpp  OptMatrix.h  OptSolution.cpp  OptSolution.h  array.cpp  array.h  data-read.cpp  data-read.h  distance-matrix.cpp  distance-matrix.h  edge.cpp  edge.h  node.h  opt-solution.cpp  opt-solution.h  optimized-solution.cpp  optimized-solution.h  optmized-matrix.cpp  optmized-matrix.h  solution.cpp  solution.h
instances/: rat195.tsp  rat99.tsp  test_tsp_euc_2d.tsp
neighborhoods/: 2-optimal.cpp  2-optimal.h  neighborhood-generator.cpp  neighborhood-generator.h  or-opt.cpp  or-opt.h  or-opt2.cpp  or-opt2.h  reinsertion.cpp  reinsertion.h  swap.cpp  swap.h
perturbations/: double-bridge.cpp  double-bridge.h
tests/: 2-optimal-test.cpp  OptMatrix.test.cpp  array-test.cpp  constructive-heuristic-test.cpp  data-read-test.cpp  distance-matrix-test.cpp  distance-test.cpp  edge-test.cpp  heuristic-test.cpp  neighborhood-generator-test.cpp  opt-solution-test.cpp  opt-solution.test.cpp  optimized-matrix-test.cpp  optimized-solution-test.cpp  or-opt-test.cpp  or-opt2-test.cpp  reinsertion-test.cpp  solution-test.cpp  string-utils-test.cpp  swap-test.cpp  test-logger.cpp  (+1 more)
(+10 files in other folders)
